# doc2sdo

./: .gitignore  README.md  pyproject.toml
.github/workflows/: continuous-deployment.yml  continuous-integration.yml
doc2sdo/: defaults.py  doc2sdo.py  llm_spacy_model.py  main.py  named_entity_recognizer.py
doc2sdo/documents/: document.py  pdf_document.py  text_document.py
doc2sdo/models/: organization.py  person.py  place.py  thing.py
doc2sdo/types/: creative_work.py  organization.py  person.py  place.py  thing.py
script/: bootstrap  format  test
tests/: conftest.py  doc2sdo_test.py  named_entity_recognizer_test.py
tests/data/text/: test-document-1.txt
