[tool.poetry]
name = "doc2sdo"
version = "1.0.0"
description = "Extract entities from text documents and transform them to schema.org resources"
authors = ["Minor Gordon <minorg@server.fake>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
